# nomadcoder-airbnb-assignment

./: .gitignore  README.md  db.sqlite3  pyproject.toml
config/: permissions.py  settings.py  urls.py
tweets/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
tweets/migrations/: 0001_initial.py  0002_initial.py  0003_like_like_type_alter_like_tweet_comment_like_comment.py
tweets/templates/: 251119_assignment.html
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_avatar_customuser_bio_and_more.py
